Send recipePreview on getAll